top-level XML parsing

--- a/test/config.yaml
+++ b/test/config.yaml
@@ -1,2 +1,4 @@
 feeds:
+  - https://strategizeyourcareer.com/feed 3
+yort:
   - https://www.youtube.com/feeds/videos.xml?channel_id=UCSp-OaMpsO8K0KkOqyBl7_w 2
