--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "matcha-rss"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "matcha"
+path = "src/main.rs"
+
 [dependencies]
 serde = "1.0"
 serde_yaml = "0.9"
