--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ serde = "1.0"
 serde_yaml = "0.9"
 reqwest = { version = "0.12", features = ["json", "blocking"] }
 quick-xml = "0.24"
+diesel = { version = "2.2.0", features = ["sqlite"] }
