--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ name = "matcha"
 path = "src/main.rs"
 
 [dependencies]
-serde = "1.0"
+serde = {version = "1.0", features = ["derive"]}
 serde_yaml = "0.9"
 reqwest = { version = "0.12", features = ["json", "blocking"] }
 quick-xml = "0.24"
