--- a/test/config.yaml
+++ b/test/config.yaml
@@ -1,4 +1,7 @@
 feeds:
-  - https://xkcd.com/rss.xml 3
-  - https://www.youtube.com/feeds/videos.xml?channel_id=UCSp-OaMpsO8K0KkOqyBl7_w 2
-  - https://blog.rust-lang.org/feed 2
+  - url: https://xkcd.com/rss.xml
+    list_length: 3
+  - url: https://www.youtube.com/feeds/videos.xml?channel_id=UCSp-OaMpsO8K0KkOqyBl7_w 
+    list_length: 2
+  - url: https://blog.rust-lang.org/feed
+    list_length: 2
